<resources>
    <string name="a_splashscreen_dialog_error_text">The welcome video could not be displayed. This can be an internet connectivity issue or your device is not compatible with ShowMax. For more information, please visit www.showmax.com or contact us at support@showmax.com.</string>
    <string name="a_splashscreen_dialog_error_title">An error has occurred</string>
    <string name="a_splashscreen_skip">SKIP</string>
    <string name="a_splashscreen_text">ShowMax gives you the best content, from movies to TV shows and more, straight to your favourite devices.</string>
    <string name="a_splashscreen_title">Welcome to ShowMax</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_bar_title_movies">%s Movies</string>
    <string name="action_bar_title_series">%s Series</string>
    <string name="action_bar_title_watchlist">Watchlist</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_by_date_newest">By Date newest</string>
    <string name="action_sort_by_date_oldest">By Date oldest</string>
    <string name="action_sort_by_name_asc">By Name ascending</string>
    <string name="action_sort_by_name_desc">By Name descending</string>
    <string name="all">All</string>
    <string name="api_activeassist_cancelled">ActiveAssist has been cancelled.</string>
    <string name="api_activeassist_message">ActiveAssist has been activated.</string>
    <string name="api_activeassist_prompt">Would you like to allow the operator to start a remote control session with your computer?</string>
    <string name="api_activeassist_reboot">Reboot has been initiated by the Operator.</string>
    <string name="api_chat_and_conjuction">and</string>
    <string name="api_chat_are_typing">are typing</string>
    <string name="api_chat_close">Close</string>
    <string name="api_chat_disconnected">You have been disconnected.</string>
    <string name="api_chat_email">Enter an email address where the chat transcript will be sent after the chat ends.</string>
    <string name="api_chat_email_transcript">Email Transcript</string>
    <string name="api_chat_end">End Chat</string>
    <string name="api_chat_ended">Your Chat has ended. You can now close the window.</string>
    <string name="api_chat_is_typing">is typing</string>
    <string name="api_chat_minimize">Minimize</string>
    <string name="api_chat_operator">Operator</string>
    <string name="api_chat_operator_ended">The operator has ended the chat. Thanks for contacting us.</string>
    <string name="api_chat_operators_busy">Please wait for the next available operator.</string>
    <string name="api_chat_queue_position">Queue position:</string>
    <string name="api_chat_required_error">Required</string>
    <string name="api_chat_required_label">&lt;font color=#CCCCCC>(Required)&lt;/font></string>
    <string name="api_chat_send">Send</string>
    <string name="api_chat_send_message">Send Message</string>
    <string name="api_chat_title">Chat</string>
    <string name="api_chat_unavailable_email">Cancel chat &amp; leave a message</string>
    <string name="api_chat_visitor">Visitor</string>
    <string name="api_chat_waiting_for_operator">Thanks for contacting us. An operator will be with you shortly...</string>
    <string name="api_email_error">Please enter a valid email address.</string>
    <string name="api_email_invalid">Email address provided was invalid.</string>
    <string name="api_email_transcript">Want a transcript of this chat? Enter your email address.</string>
    <string name="api_generic_cancel">Cancel</string>
    <string name="api_generic_network_failed">There was a network problem, unable to contact chat servers.</string>
    <string name="api_generic_no">No</string>
    <string name="api_generic_ok">OK</string>
    <string name="api_generic_yes">Yes</string>
    <string name="api_postchat_emailed">Your feedback has been submitted, and the chat transcript has been emailed to</string>
    <string name="api_postchat_intro">Help us improve, please complete the survey below.</string>
    <string name="api_postchat_submitted">Your feedback has been submitted.</string>
    <string name="api_postchat_submitted_and_emailed">Your feedback has been submitted, and the chat transcript has been emailed to</string>
    <string name="api_prechat_intro">Thanks for contacting us. Please complete this form and click Start Chat.</string>
    <string name="api_prechat_language">Language</string>
    <string name="api_prechat_required">* Required</string>
    <string name="api_prechat_start">Start Chat</string>
    <string name="api_unavailable_emailed">Thank you for your email. We will contact you as soon as possible.</string>
    <string name="api_unavailable_intro">"Sorry, we can't chat right now. Please send an email using the form below."</string>
    <string name="api_unavailable_no_operators">Sorry, no operators are available at the moment. Please try back later.</string>
    <string name="api_unavailable_recapture">An operator has become available. Would you like to chat with them?</string>
    <string name="api_unsecure_message">Chat Not Validated</string>
    <string name="app_name">ShowMax</string>
    <string name="app_store_name">google_play</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_languages">Audio Languages</string>
    <string name="bc_no_internet_permission">Application does not have INTERNET permission</string>
    <string name="bollywood">Bollywood</string>
    <string name="btn_back">Back</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_content_warning_go_back">GO BACK</string>
    <string name="btn_content_warning_watch">WATCH</string>
    <string name="btn_email">Email</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_start_over">Start over</string>
    <string name="btn_yes">Yes</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="contact_us">Contact Us</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="define_smoothprogressbar" />
    <string name="detail">Detail</string>
    <string name="dialog_audio_language_title">Choose audio language</string>
    <string name="dialog_search_filter_category">Category:</string>
    <string name="dialog_search_filter_section">Section:</string>
    <string name="dialog_search_filter_type">Type:</string>
</resources>