<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:paddingLeft="@dimen/dialogs_list_item_horizontal_padding" android:paddingRight="@dimen/dialogs_list_item_horizontal_padding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:columnCount="2" android:columnOrderPreserved="false" android:useDefaultMargins="true" android:alignmentMode="alignBounds"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:roboto="http://schemas.android.com/apk/res-auto">
    <com.eevoskos.robotoviews.widget.RobotoTextView android:textSize="@dimen/dialogs_list_item_text_size" android:gravity="center_vertical" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/dialogs_list_item_min_height" android:text="@string/dialog_search_filter_section" roboto:typeface="light" />
    <Spinner android:id="@id/dialog_filter_section_spinner" android:layout_width="@dimen/dialogs_spinner_size_3x" android:layout_height="wrap_content" android:minHeight="@dimen/dialogs_list_item_min_height" />
    <com.eevoskos.robotoviews.widget.RobotoTextView android:textSize="@dimen/dialogs_list_item_text_size" android:gravity="center_vertical" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/dialogs_list_item_min_height" android:layout_column="0" android:text="@string/dialog_search_filter_category" roboto:typeface="light" />
    <Spinner android:id="@id/dialog_filter_category_spinner" android:layout_width="@dimen/dialogs_spinner_size_3x" android:layout_height="wrap_content" android:minHeight="30.0dip" />
    <com.eevoskos.robotoviews.widget.RobotoTextView android:textSize="@dimen/dialogs_list_item_text_size" android:gravity="center_vertical" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/dialogs_list_item_min_height" android:layout_column="0" android:text="@string/dialog_search_filter_type" roboto:typeface="light" />
    <Spinner android:id="@id/dialog_filter_type_spinner" android:layout_width="@dimen/dialogs_spinner_size_3x" android:layout_height="wrap_content" android:minHeight="@dimen/dialogs_list_item_min_height" />
</GridLayout>